--- a/browser.html
+++ b/browser.html
@@ -37,9 +37,9 @@
 <span class="l">2: </span>
 <span class="l">3: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">type</span> <span onmouseout="hideTip(event, 'fs2', 2)" onmouseover="showTip(event, 'fs2', 2)" class="t">Model</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs3', 3)" onmouseover="showTip(event, 'fs3', 3)" class="t">int</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">type</span> <span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="t">Model</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs2', 2)" onmouseover="showTip(event, 'fs2', 2)" class="t">int</span>
 
-<span class="k">type</span> <span onmouseout="hideTip(event, 'fs4', 4)" onmouseover="showTip(event, 'fs4', 4)" class="t">Msg</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs5', 5)" onmouseover="showTip(event, 'fs5', 5)" class="p">Increment</span> | <span onmouseout="hideTip(event, 'fs6', 6)" onmouseover="showTip(event, 'fs6', 6)" class="p">Decrement</span>
+<span class="k">type</span> <span onmouseout="hideTip(event, 'fs3', 3)" onmouseover="showTip(event, 'fs3', 3)" class="t">Msg</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs4', 4)" onmouseover="showTip(event, 'fs4', 4)" class="p">Increment</span> | <span onmouseout="hideTip(event, 'fs5', 5)" onmouseover="showTip(event, 'fs5', 5)" class="p">Decrement</span>
 </code></pre></td>
 </tr>
 </table>
@@ -54,15 +54,15 @@
 <span class="l">8: </span>
 <span class="l">9: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span onmouseout="hideTip(event, 'fs1', 7)" onmouseover="showTip(event, 'fs1', 7)" class="i">Elmish</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span class="i">Elmish</span>
 
-<span class="k">let</span> <span onmouseout="hideTip(event, 'fs7', 8)" onmouseover="showTip(event, 'fs7', 8)" class="f">init</span> () <span class="o">=</span>
+<span class="k">let</span> <span onmouseout="hideTip(event, 'fs6', 6)" onmouseover="showTip(event, 'fs6', 6)" class="f">init</span> () <span class="o">=</span>
   <span class="n">0</span>
 
-<span class="k">let</span> <span onmouseout="hideTip(event, 'fs8', 9)" onmouseover="showTip(event, 'fs8', 9)" class="f">update</span> (<span onmouseout="hideTip(event, 'fs9', 10)" onmouseover="showTip(event, 'fs9', 10)" class="i">msg</span><span class="o">:</span><span onmouseout="hideTip(event, 'fs4', 11)" onmouseover="showTip(event, 'fs4', 11)" class="t">Msg</span>) <span onmouseout="hideTip(event, 'fs10', 12)" onmouseover="showTip(event, 'fs10', 12)" class="i">count</span> <span class="o">=</span>
-  <span class="k">match</span> <span onmouseout="hideTip(event, 'fs9', 13)" onmouseover="showTip(event, 'fs9', 13)" class="i">msg</span> <span class="k">with</span>
-  | <span onmouseout="hideTip(event, 'fs5', 14)" onmouseover="showTip(event, 'fs5', 14)" class="p">Increment</span> <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs10', 15)" onmouseover="showTip(event, 'fs10', 15)" class="i">count</span> <span class="o">+</span> <span class="n">1</span>
-  | <span onmouseout="hideTip(event, 'fs6', 16)" onmouseover="showTip(event, 'fs6', 16)" class="p">Decrement</span> <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs10', 17)" onmouseover="showTip(event, 'fs10', 17)" class="i">count</span> <span class="o">-</span> <span class="n">1</span>
+<span class="k">let</span> <span onmouseout="hideTip(event, 'fs7', 7)" onmouseover="showTip(event, 'fs7', 7)" class="f">update</span> (<span onmouseout="hideTip(event, 'fs8', 8)" onmouseover="showTip(event, 'fs8', 8)" class="i">msg</span><span class="o">:</span><span onmouseout="hideTip(event, 'fs3', 9)" onmouseover="showTip(event, 'fs3', 9)" class="t">Msg</span>) <span onmouseout="hideTip(event, 'fs9', 10)" onmouseover="showTip(event, 'fs9', 10)" class="i">count</span> <span class="o">=</span>
+  <span class="k">match</span> <span onmouseout="hideTip(event, 'fs8', 11)" onmouseover="showTip(event, 'fs8', 11)" class="i">msg</span> <span class="k">with</span>
+  | <span onmouseout="hideTip(event, 'fs4', 12)" onmouseover="showTip(event, 'fs4', 12)" class="p">Increment</span> <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs9', 13)" onmouseover="showTip(event, 'fs9', 13)" class="i">count</span> <span class="o">+</span> <span class="n">1</span>
+  | <span onmouseout="hideTip(event, 'fs5', 14)" onmouseover="showTip(event, 'fs5', 14)" class="p">Decrement</span> <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs9', 15)" onmouseover="showTip(event, 'fs9', 15)" class="i">count</span> <span class="o">-</span> <span class="n">1</span>
 </code></pre></td>
 </tr>
 </table>
@@ -78,15 +78,15 @@
 <span class="l">8: </span>
 <span class="l">9: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span class="i">Fable</span><span class="o">.</span><span class="i">Helpers</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs11', 18)" onmouseover="showTip(event, 'fs11', 18)" class="i">React</span><span class="o">.</span><span class="i">Props</span>
-<span class="k">module</span> <span class="i">R</span> <span class="o">=</span> <span class="i">Fable</span><span class="o">.</span><span class="i">Helpers</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs11', 19)" onmouseover="showTip(event, 'fs11', 19)" class="i">React</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span class="i">Fable</span><span class="o">.</span><span class="i">React</span><span class="o">.</span><span class="i">Props</span>
+<span class="k">module</span> <span class="i">R</span> <span class="o">=</span> <span class="i">Fable</span><span class="o">.</span><span class="i">React</span>
 
-<span class="k">let</span> <span onmouseout="hideTip(event, 'fs12', 20)" onmouseover="showTip(event, 'fs12', 20)" class="f">view</span> <span onmouseout="hideTip(event, 'fs13', 21)" onmouseover="showTip(event, 'fs13', 21)" class="i">model</span> <span onmouseout="hideTip(event, 'fs14', 22)" onmouseover="showTip(event, 'fs14', 22)" class="i">dispatch</span> <span class="o">=</span>
+<span class="k">let</span> <span onmouseout="hideTip(event, 'fs10', 16)" onmouseover="showTip(event, 'fs10', 16)" class="f">view</span> <span onmouseout="hideTip(event, 'fs11', 17)" onmouseover="showTip(event, 'fs11', 17)" class="i">model</span> <span onmouseout="hideTip(event, 'fs12', 18)" onmouseover="showTip(event, 'fs12', 18)" class="i">dispatch</span> <span class="o">=</span>
 
   <span class="i">R</span><span class="o">.</span><span class="i">div</span> []
-      [ <span class="i">R</span><span class="o">.</span><span class="i">button</span> [ <span class="i">OnClick</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs14', 23)" onmouseover="showTip(event, 'fs14', 23)" class="i">dispatch</span> <span onmouseout="hideTip(event, 'fs6', 24)" onmouseover="showTip(event, 'fs6', 24)" class="i">Decrement</span>) ] [ <span class="i">R</span><span class="o">.</span><span class="i">str</span> <span class="s">&quot;-&quot;</span> ]
-        <span class="i">R</span><span class="o">.</span><span class="i">div</span> [] [ <span class="i">R</span><span class="o">.</span><span class="i">str</span> (<span onmouseout="hideTip(event, 'fs15', 25)" onmouseover="showTip(event, 'fs15', 25)" class="i">sprintf</span> <span class="s">&quot;%A&quot;</span> <span onmouseout="hideTip(event, 'fs13', 26)" onmouseover="showTip(event, 'fs13', 26)" class="i">model</span>) ]
-        <span class="i">R</span><span class="o">.</span><span class="i">button</span> [ <span class="i">OnClick</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs14', 27)" onmouseover="showTip(event, 'fs14', 27)" class="i">dispatch</span> <span onmouseout="hideTip(event, 'fs5', 28)" onmouseover="showTip(event, 'fs5', 28)" class="i">Increment</span>) ] [ <span class="i">R</span><span class="o">.</span><span class="i">str</span> <span class="s">&quot;+&quot;</span> ] ]
+      [ <span class="i">R</span><span class="o">.</span><span class="i">button</span> [ <span class="i">OnClick</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs12', 19)" onmouseover="showTip(event, 'fs12', 19)" class="i">dispatch</span> <span onmouseout="hideTip(event, 'fs5', 20)" onmouseover="showTip(event, 'fs5', 20)" class="i">Decrement</span>) ] [ <span class="i">R</span><span class="o">.</span><span class="i">str</span> <span class="s">&quot;-&quot;</span> ]
+        <span class="i">R</span><span class="o">.</span><span class="i">div</span> [] [ <span class="i">R</span><span class="o">.</span><span class="i">str</span> (<span onmouseout="hideTip(event, 'fs13', 21)" onmouseover="showTip(event, 'fs13', 21)" class="i">sprintf</span> <span class="s">&quot;%A&quot;</span> <span onmouseout="hideTip(event, 'fs11', 22)" onmouseover="showTip(event, 'fs11', 22)" class="i">model</span>) ]
+        <span class="i">R</span><span class="o">.</span><span class="i">button</span> [ <span class="i">OnClick</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs12', 23)" onmouseover="showTip(event, 'fs12', 23)" class="i">dispatch</span> <span onmouseout="hideTip(event, 'fs4', 24)" onmouseover="showTip(event, 'fs4', 24)" class="i">Increment</span>) ] [ <span class="i">R</span><span class="o">.</span><span class="i">str</span> <span class="s">&quot;+&quot;</span> ] ]
 </code></pre></td>
 </tr>
 </table>
@@ -94,7 +94,7 @@
 <p>Now we need to tell React to render our view in the div placeholder we defined in our <code>index.html</code>:</p>
 <table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l">1: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="o">&lt;</span><span class="i">div</span> <span onmouseout="hideTip(event, 'fs16', 29)" onmouseover="showTip(event, 'fs16', 29)" class="i">id</span><span class="o">=</span><span class="s">&quot;elmish-app&quot;</span><span class="o">&gt;</span><span class="o">&lt;/</span><span class="i">div</span><span class="o">&gt;</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="o">&lt;</span><span class="i">div</span> <span onmouseout="hideTip(event, 'fs14', 25)" onmouseover="showTip(event, 'fs14', 25)" class="i">id</span><span class="o">=</span><span class="s">&quot;elmish-app&quot;</span><span class="o">&gt;</span><span class="o">&lt;/</span><span class="i">div</span><span class="o">&gt;</span>
 </code></pre></td>
 </tr>
 </table>
@@ -105,34 +105,30 @@
 <span class="l">4: </span>
 <span class="l">5: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span onmouseout="hideTip(event, 'fs1', 30)" onmouseover="showTip(event, 'fs1', 30)" class="i">Elmish</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs11', 31)" onmouseover="showTip(event, 'fs11', 31)" class="i">React</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span class="i">Elmish</span><span class="o">.</span><span class="i">React</span>
 
-<span onmouseout="hideTip(event, 'fs17', 32)" onmouseover="showTip(event, 'fs17', 32)" class="i">Program</span><span class="o">.</span><span class="i">mkSimple</span> <span onmouseout="hideTip(event, 'fs7', 33)" onmouseover="showTip(event, 'fs7', 33)" class="i">init</span> <span onmouseout="hideTip(event, 'fs8', 34)" onmouseover="showTip(event, 'fs8', 34)" class="i">update</span> <span onmouseout="hideTip(event, 'fs12', 35)" onmouseover="showTip(event, 'fs12', 35)" class="i">view</span>
-<span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs17', 36)" onmouseover="showTip(event, 'fs17', 36)" class="t">Program</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs18', 37)" onmouseover="showTip(event, 'fs18', 37)" class="f">withReact</span> <span class="s">&quot;elmish-app&quot;</span>
-<span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs17', 38)" onmouseover="showTip(event, 'fs17', 38)" class="i">Program</span><span class="o">.</span><span class="i">run</span>
+<span class="i">Program</span><span class="o">.</span><span class="i">mkSimple</span> <span onmouseout="hideTip(event, 'fs6', 26)" onmouseover="showTip(event, 'fs6', 26)" class="i">init</span> <span onmouseout="hideTip(event, 'fs7', 27)" onmouseover="showTip(event, 'fs7', 27)" class="i">update</span> <span onmouseout="hideTip(event, 'fs10', 28)" onmouseover="showTip(event, 'fs10', 28)" class="i">view</span>
+<span class="o">|&gt;</span> <span class="i">Program</span><span class="o">.</span><span class="i">withReact</span> <span class="s">&quot;elmish-app&quot;</span>
+<span class="o">|&gt;</span> <span class="i">Program</span><span class="o">.</span><span class="i">run</span>
 </code></pre></td>
 </tr>
 </table>
 <p>And that's it.</p>
 
-<div class="tip" id="fs1">namespace Elmish</div>
-<div class="tip" id="fs2">type Model = int<br /><br />Full name: Browser.Model</div>
-<div class="tip" id="fs3">Multiple items<br />val int : value:&#39;T -&gt; int (requires member op_Explicit)<br /><br />Full name: Microsoft.FSharp.Core.Operators.int<br /><br />--------------------<br />type int = int32<br /><br />Full name: Microsoft.FSharp.Core.int<br /><br />--------------------<br />type int&lt;&#39;Measure&gt; = int<br /><br />Full name: Microsoft.FSharp.Core.int&lt;_&gt;</div>
-<div class="tip" id="fs4">type Msg =<br />&#160;&#160;| Increment<br />&#160;&#160;| Decrement<br /><br />Full name: Browser.Msg</div>
-<div class="tip" id="fs5">union case Msg.Increment: Msg</div>
-<div class="tip" id="fs6">union case Msg.Decrement: Msg</div>
-<div class="tip" id="fs7">val init : unit -&gt; int<br /><br />Full name: Browser.init</div>
-<div class="tip" id="fs8">val update : msg:Msg -&gt; count:int -&gt; int<br /><br />Full name: Browser.update</div>
-<div class="tip" id="fs9">val msg : Msg</div>
-<div class="tip" id="fs10">val count : int</div>
-<div class="tip" id="fs11">namespace Elmish.React</div>
-<div class="tip" id="fs12">val view : model:&#39;a -&gt; dispatch:&#39;b -&gt; &#39;c<br /><br />Full name: Browser.view</div>
-<div class="tip" id="fs13">val model : &#39;a</div>
-<div class="tip" id="fs14">val dispatch : &#39;b</div>
-<div class="tip" id="fs15">val sprintf : format:Printf.StringFormat&lt;&#39;T&gt; -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Core.ExtraTopLevelOperators.sprintf</div>
-<div class="tip" id="fs16">val id : x:&#39;T -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Core.Operators.id</div>
-<div class="tip" id="fs17">module Program<br /><br />from Elmish.React</div>
-<div class="tip" id="fs18"></div>
+<div class="tip" id="fs1">type Model = int<br /><br />Full name: Browser.Model</div>
+<div class="tip" id="fs2">Multiple items<br />val int : value:&#39;T -&gt; int (requires member op_Explicit)<br /><br />Full name: Microsoft.FSharp.Core.Operators.int<br /><br />--------------------<br />type int = int32<br /><br />Full name: Microsoft.FSharp.Core.int<br /><br />--------------------<br />type int&lt;&#39;Measure&gt; = int<br /><br />Full name: Microsoft.FSharp.Core.int&lt;_&gt;</div>
+<div class="tip" id="fs3">type Msg =<br />&#160;&#160;| Increment<br />&#160;&#160;| Decrement<br /><br />Full name: Browser.Msg</div>
+<div class="tip" id="fs4">union case Msg.Increment: Msg</div>
+<div class="tip" id="fs5">union case Msg.Decrement: Msg</div>
+<div class="tip" id="fs6">val init : unit -&gt; int<br /><br />Full name: Browser.init</div>
+<div class="tip" id="fs7">val update : msg:Msg -&gt; count:int -&gt; int<br /><br />Full name: Browser.update</div>
+<div class="tip" id="fs8">val msg : Msg</div>
+<div class="tip" id="fs9">val count : int</div>
+<div class="tip" id="fs10">val view : model:&#39;a -&gt; dispatch:&#39;b -&gt; &#39;c<br /><br />Full name: Browser.view</div>
+<div class="tip" id="fs11">val model : &#39;a</div>
+<div class="tip" id="fs12">val dispatch : &#39;b</div>
+<div class="tip" id="fs13">val sprintf : format:Printf.StringFormat&lt;&#39;T&gt; -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Core.ExtraTopLevelOperators.sprintf</div>
+<div class="tip" id="fs14">val id : x:&#39;T -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Core.Operators.id</div>
 
         </div>
         <div class="span3">
