--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@ Thanks to lazy views however, the update process can be optimized by avoiding DO
 <span class="l">7: </span>
 <span class="l">8: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span onmouseout="hideTip(event, 'fs6', 25)" onmouseover="showTip(event, 'fs6', 25)" class="i">Elmish</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs17', 26)" onmouseover="showTip(event, 'fs17', 26)" class="i">React</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span class="i">Elmish</span><span class="o">.</span><span class="i">React</span>
 
 <span class="c">// val view : &#39;a -&gt; ReactElement</span>
-<span onmouseout="hideTip(event, 'fs18', 27)" onmouseover="showTip(event, 'fs18', 27)" class="f">lazyView</span> <span onmouseout="hideTip(event, 'fs1', 28)" onmouseover="showTip(event, 'fs1', 28)" class="i">view1</span> <span onmouseout="hideTip(event, 'fs11', 29)" onmouseover="showTip(event, 'fs11', 29)" class="i">model</span>
+<span class="i">lazyView</span> <span onmouseout="hideTip(event, 'fs1', 22)" onmouseover="showTip(event, 'fs1', 22)" class="i">view1</span> <span onmouseout="hideTip(event, 'fs10', 23)" onmouseover="showTip(event, 'fs10', 23)" class="i">model</span>
 
 <span class="c">// or given a typical view function, defined like this:</span>
 <span class="c">// val view : &#39;a -&gt; Dispatch&lt;&#39;msg&gt; -&gt; ReactElement</span>
-<span onmouseout="hideTip(event, 'fs18', 30)" onmouseover="showTip(event, 'fs18', 30)" class="f">lazyView2</span> <span onmouseout="hideTip(event, 'fs4', 31)" onmouseover="showTip(event, 'fs4', 31)" class="i">view2</span> <span onmouseout="hideTip(event, 'fs11', 32)" onmouseover="showTip(event, 'fs11', 32)" class="i">model</span> <span onmouseout="hideTip(event, 'fs15', 33)" onmouseover="showTip(event, 'fs15', 33)" class="i">dispatch</span>
+<span class="i">lazyView2</span> <span onmouseout="hideTip(event, 'fs4', 24)" onmouseover="showTip(event, 'fs4', 24)" class="i">view2</span> <span onmouseout="hideTip(event, 'fs10', 25)" onmouseover="showTip(event, 'fs10', 25)" class="i">model</span> <span onmouseout="hideTip(event, 'fs14', 26)" onmouseover="showTip(event, 'fs14', 26)" class="i">dispatch</span>
 </code></pre></td>
 </tr>
 </table>
@@ -81,7 +81,7 @@ Thanks to lazy views however, the update process can be optimized by avoiding DO
 <span class="l">2: </span>
 </pre></td>
 <td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="c">// val view : &#39;a -&gt; &#39;b -&gt; Dispatch&lt;&#39;msg&gt; -&gt; ReactElement</span>
-<span onmouseout="hideTip(event, 'fs18', 34)" onmouseover="showTip(event, 'fs18', 34)" class="f">lazyView3</span> <span onmouseout="hideTip(event, 'fs7', 35)" onmouseover="showTip(event, 'fs7', 35)" class="i">view3</span> <span onmouseout="hideTip(event, 'fs13', 36)" onmouseover="showTip(event, 'fs13', 36)" class="i">model1</span> <span onmouseout="hideTip(event, 'fs14', 37)" onmouseover="showTip(event, 'fs14', 37)" class="i">model2</span> <span onmouseout="hideTip(event, 'fs15', 38)" onmouseover="showTip(event, 'fs15', 38)" class="i">dispatch</span>
+<span class="i">lazyView3</span> <span onmouseout="hideTip(event, 'fs6', 27)" onmouseover="showTip(event, 'fs6', 27)" class="i">view3</span> <span onmouseout="hideTip(event, 'fs12', 28)" onmouseover="showTip(event, 'fs12', 28)" class="i">model1</span> <span onmouseout="hideTip(event, 'fs13', 29)" onmouseover="showTip(event, 'fs13', 29)" class="i">model2</span> <span onmouseout="hideTip(event, 'fs14', 30)" onmouseover="showTip(event, 'fs14', 30)" class="i">dispatch</span>
 </code></pre></td>
 </tr>
 </table>
@@ -92,19 +92,16 @@ Thanks to lazy views however, the update process can be optimized by avoiding DO
 <div class="tip" id="fs3">val failwith : message:string -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Core.Operators.failwith</div>
 <div class="tip" id="fs4">val view2 : model:&#39;a -&gt; dispatch:&#39;b -&gt; &#39;c<br /><br />Full name: Index.view2</div>
 <div class="tip" id="fs5">val dispatch : &#39;b</div>
-<div class="tip" id="fs6">namespace Elmish</div>
-<div class="tip" id="fs7">val view3 : model1:&#39;a -&gt; model2:&#39;b -&gt; dispatch:&#39;c -&gt; &#39;d<br /><br />Full name: Index.view3</div>
-<div class="tip" id="fs8">val model1 : &#39;a</div>
-<div class="tip" id="fs9">val model2 : &#39;b</div>
-<div class="tip" id="fs10">val dispatch : &#39;c</div>
-<div class="tip" id="fs11">val model : string option<br /><br />Full name: Index.model</div>
-<div class="tip" id="fs12">union case Option.Some: Value: &#39;T -&gt; Option&lt;&#39;T&gt;</div>
-<div class="tip" id="fs13">val model1 : int option<br /><br />Full name: Index.model1</div>
-<div class="tip" id="fs14">val model2 : float option<br /><br />Full name: Index.model2</div>
-<div class="tip" id="fs15">val dispatch : obj<br /><br />Full name: Index.dispatch</div>
-<div class="tip" id="fs16">type unit = Unit<br /><br />Full name: Microsoft.FSharp.Core.unit</div>
-<div class="tip" id="fs17">namespace Elmish.React</div>
-<div class="tip" id="fs18"></div>
+<div class="tip" id="fs6">val view3 : model1:&#39;a -&gt; model2:&#39;b -&gt; dispatch:&#39;c -&gt; &#39;d<br /><br />Full name: Index.view3</div>
+<div class="tip" id="fs7">val model1 : &#39;a</div>
+<div class="tip" id="fs8">val model2 : &#39;b</div>
+<div class="tip" id="fs9">val dispatch : &#39;c</div>
+<div class="tip" id="fs10">val model : string option<br /><br />Full name: Index.model</div>
+<div class="tip" id="fs11">union case Option.Some: Value: &#39;T -&gt; Option&lt;&#39;T&gt;</div>
+<div class="tip" id="fs12">val model1 : int option<br /><br />Full name: Index.model1</div>
+<div class="tip" id="fs13">val model2 : float option<br /><br />Full name: Index.model2</div>
+<div class="tip" id="fs14">val dispatch : obj<br /><br />Full name: Index.dispatch</div>
+<div class="tip" id="fs15">type unit = Unit<br /><br />Full name: Microsoft.FSharp.Core.unit</div>
 
         </div>
         <div class="span3">
