--- a/browser.html
+++ b/browser.html
@@ -78,15 +78,17 @@
 <span class="l">8: </span>
 <span class="l">9: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span class="i">Fable</span><span class="o">.</span><span class="i">React</span><span class="o">.</span><span class="i">Props</span>
-<span class="k">module</span> <span class="i">R</span> <span class="o">=</span> <span class="i">Fable</span><span class="o">.</span><span class="i">React</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp">
+<span class="k">open</span> <span class="i">Fable</span><span class="o">.</span><span class="i">React</span><span class="o">.</span><span class="i">Props</span>
+<span class="k">open</span> <span class="i">Fable</span><span class="o">.</span><span class="i">React</span><span class="o">.</span><span class="i">Helpers</span>
+<span class="k">open</span> <span class="i">Fable</span><span class="o">.</span><span class="i">React</span><span class="o">.</span><span class="i">Standard</span>
 
 <span class="k">let</span> <span onmouseout="hideTip(event, 'fs10', 16)" onmouseover="showTip(event, 'fs10', 16)" class="f">view</span> <span onmouseout="hideTip(event, 'fs11', 17)" onmouseover="showTip(event, 'fs11', 17)" class="i">model</span> <span onmouseout="hideTip(event, 'fs12', 18)" onmouseover="showTip(event, 'fs12', 18)" class="i">dispatch</span> <span class="o">=</span>
 
-  <span class="i">R</span><span class="o">.</span><span class="i">div</span> []
-      [ <span class="i">R</span><span class="o">.</span><span class="i">button</span> [ <span class="i">OnClick</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs12', 19)" onmouseover="showTip(event, 'fs12', 19)" class="i">dispatch</span> <span onmouseout="hideTip(event, 'fs5', 20)" onmouseover="showTip(event, 'fs5', 20)" class="i">Decrement</span>) ] [ <span class="i">R</span><span class="o">.</span><span class="i">str</span> <span class="s">&quot;-&quot;</span> ]
-        <span class="i">R</span><span class="o">.</span><span class="i">div</span> [] [ <span class="i">R</span><span class="o">.</span><span class="i">str</span> (<span onmouseout="hideTip(event, 'fs13', 21)" onmouseover="showTip(event, 'fs13', 21)" class="i">sprintf</span> <span class="s">&quot;%A&quot;</span> <span onmouseout="hideTip(event, 'fs11', 22)" onmouseover="showTip(event, 'fs11', 22)" class="i">model</span>) ]
-        <span class="i">R</span><span class="o">.</span><span class="i">button</span> [ <span class="i">OnClick</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs12', 23)" onmouseover="showTip(event, 'fs12', 23)" class="i">dispatch</span> <span onmouseout="hideTip(event, 'fs4', 24)" onmouseover="showTip(event, 'fs4', 24)" class="i">Increment</span>) ] [ <span class="i">R</span><span class="o">.</span><span class="i">str</span> <span class="s">&quot;+&quot;</span> ] ]
+  <span class="i">div</span> []
+      [ <span class="i">button</span> [ <span class="i">OnClick</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs12', 19)" onmouseover="showTip(event, 'fs12', 19)" class="i">dispatch</span> <span onmouseout="hideTip(event, 'fs5', 20)" onmouseover="showTip(event, 'fs5', 20)" class="i">Decrement</span>) ] [ <span class="i">str</span> <span class="s">&quot;-&quot;</span> ]
+        <span class="i">div</span> [] [ <span class="i">str</span> (<span onmouseout="hideTip(event, 'fs13', 21)" onmouseover="showTip(event, 'fs13', 21)" class="i">sprintf</span> <span class="s">&quot;%A&quot;</span> <span onmouseout="hideTip(event, 'fs11', 22)" onmouseover="showTip(event, 'fs11', 22)" class="i">model</span>) ]
+        <span class="i">button</span> [ <span class="i">OnClick</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs12', 23)" onmouseover="showTip(event, 'fs12', 23)" class="i">dispatch</span> <span onmouseout="hideTip(event, 'fs4', 24)" onmouseover="showTip(event, 'fs4', 24)" class="i">Increment</span>) ] [ <span class="i">str</span> <span class="s">&quot;+&quot;</span> ] ]
 </code></pre></td>
 </tr>
 </table>
@@ -106,9 +108,9 @@
 <span class="l">5: </span>
 </pre></td>
 <td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span class="i">Elmish</span><span class="o">.</span><span class="i">React</span>
-
+  
 <span class="i">Program</span><span class="o">.</span><span class="i">mkSimple</span> <span onmouseout="hideTip(event, 'fs6', 26)" onmouseover="showTip(event, 'fs6', 26)" class="i">init</span> <span onmouseout="hideTip(event, 'fs7', 27)" onmouseover="showTip(event, 'fs7', 27)" class="i">update</span> <span onmouseout="hideTip(event, 'fs10', 28)" onmouseover="showTip(event, 'fs10', 28)" class="i">view</span>
-<span class="o">|&gt;</span> <span class="i">Program</span><span class="o">.</span><span class="i">withReact</span> <span class="s">&quot;elmish-app&quot;</span>
+<span class="o">|&gt;</span> <span class="i">Program</span><span class="o">.</span><span class="i">withReactBatched</span> <span class="s">&quot;elmish-app&quot;</span>
 <span class="o">|&gt;</span> <span class="i">Program</span><span class="o">.</span><span class="i">run</span>
 </code></pre></td>
 </tr>
